--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <h1>Using the Yeezy logo font on your website</h1>
       <h1 class="logo">Yeezy</h1>
-      <p>all you have to is copy the snippet below to import the font into your project</p><code>@import url(http://mcansh.github.io/yeezy-logo-font/assets/css/font.css);</code>
+      <p>all you have to do is copy the snippet below to import the font into your project</p><code>@import url(http://mcansh.github.io/yeezy-logo-font/assets/css/font.css);</code>
     </main>
     <footer><a href="http://github.com/mcansh/yeezy-logo-font">View project on GitHub</a></footer>
   </body>
