remove pinned tab icon
Signed-off-by: Logan McAnsh <l.m@loganmcansh.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Yeezy logo font">
     <meta name="keywords" content="Yeezy logo font">
     <meta name="author" content="Logan McAnsh">
-    <link rel="mask-icon" href="assets/img/yeezy.svg" color="#635E5A">
+    <meta name="theme-color" content="#635E5A">
     <link rel="shortcut icon" href="assets/img/yeezy.png">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
